rust/tests/trybuild_soe_max.stderr
error[E0599]: no function or associated item named `new` found for struct `swag::soe::SoE<swag::ops::Int, swag::ops::Max>` in the current scope
 --> $DIR/trybuild_soe_max.fail:6:22
  |
6 |     SoE::<Int, Max>::new();
  |                      ^^^ function or associated item not found in `swag::soe::SoE<swag::ops::Int, swag::ops::Max>`

error[E0277]: the trait bound `swag::ops::Int: alga::general::one_operator::AbstractGroup<swag::ops::Max>` is not satisfied
  --> $DIR/trybuild_soe_max.fail:6:5
   |
6  |     SoE::<Int, Max>::new();
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `alga::general::one_operator::AbstractGroup<swag::ops::Max>` is not implemented for `swag::ops::Int`
   |
  ::: $WORKSPACE/src/soe/mod.rs
   |
   |     Value: AbstractGroup<BinOp> + Clone,
   |            -------------------- required by this bound in `swag::soe::SoE`
   |
   = help: the following implementations were found:
             <swag::ops::Int as alga::general::one_operator::AbstractGroup<swag::ops::Sum>>
